@startuml

title __TICKETS's Class Diagram__\n

  namespace ninja.diku.ticket {
    namespace tickets {
      class ninja.diku.ticket.tickets.GenericTicket {
          + GenericTicket()
          + getCloseDisplay()
          + getClosedTicketChannel()
          + getContext()
          + getDisplay()
          + getOpenTicketChannel()
          + getType()
      }
    }
  }
  

  namespace ninja.diku.ticket {
    namespace tickets {
      class ninja.diku.ticket.tickets.MajorTicket {
          + MajorTicket()
          + getCloseDisplay()
          + getClosedTicketChannel()
          + getContext()
          + getDisplay()
          + getMajor()
          + getOpenTicketChannel()
          + getType()
      }
    }
  }
  

  ninja.diku.ticket.tickets.GenericTicket -up-|> ninja.diku.ticket.Ticket
  ninja.diku.ticket.tickets.MajorTicket -up-|> ninja.diku.ticket.Ticket
  ninja.diku.ticket.tickets.MajorTicket o-- ninja.diku.ku.Major : major


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
